# kuizfan32

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  generate.yml
assets/sounds/: .gitkeep
config/: defaults.yaml
data/embeddings/: index.faiss  texts.json
src/quiz_generator/: __init__.py  __main__.py
src/quiz_generator/ai/: __init__.py  gemini_provider.py  prompt_manager.py
src/quiz_generator/ai/prompts/: hook_generation.j2  metadata_generation.j2  quiz_generation.j2
src/quiz_generator/anti_repetition/: __init__.py  engine.py
src/quiz_generator/audio/: __init__.py  edge_tts_provider.py  engine.py  music_manager.py  sfx_manager.py
src/quiz_generator/config/: __init__.py
src/quiz_generator/core/: __init__.py  enums.py  exceptions.py  interfaces.py  models.py
src/quiz_generator/orchestrator/: __init__.py  pipeline.py
src/quiz_generator/plugins/: __init__.py  base_plugin.py  registry.py
src/quiz_generator/plugins/builtin/: __init__.py  brain_teaser.py  emoji_quiz.py  fast_choice.py  guess_animal.py  guess_brand.py  guess_car.py  guess_celebrity.py  guess_character.py  guess_country.py  guess_flag.py  guess_food.py  guess_football_player.py  guess_logo.py  guess_movie.py  guess_pokemon.py  guess_song.py  guess_sound.py  guess_voice.py  impossible_quiz.py  iq_test.py  memory_challenge.py  optical_illusion.py  riddle.py  spot_the_difference.py  spot_the_mistake.py  survival_choice.py  trivia.py  true_or_false.py  who_is_more.py  would_you_rather.py
src/quiz_generator/video/: __init__.py  composer.py  effects.py  engine.py  font_manager.py  thumbnail.py  video_fetcher.py
tests/: conftest.py
tests/unit/: test_builtin_plugins.py  test_effects.py  test_models.py  test_plugin_registry.py  test_thumbnail.py
