[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-viral-quiz-generator"
version = "0.1.0"
description = "Plataforma profesional de generación automática de videos virales de quizzes para YouTube Shorts, TikTok e Instagram Reels."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "AI Viral Quiz Team" },
]
keywords = ["quiz", "viral", "video", "youtube-shorts", "tiktok", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    # IA / LLM
    "google-genai>=1.0.0",
    # TTS
    "edge-tts>=6.1.0",
    # Video
    "moviepy>=2.0.0",
    # Imagen
    "Pillow>=10.0.0",
    # Base de datos
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Configuración
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    # Plantillas de prompts
    "Jinja2>=3.1.0",
    # Anti-repetición
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    # Utilidades
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "tenacity>=9.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
    "mypy>=1.11.0",
]
elevenlabs = [
    "elevenlabs>=1.0.0",
]
openai-tts = [
    "openai>=1.40.0",
]

[project.scripts]
quiz-generator = "quiz_generator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quiz_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marca tests que requieren APIs externas o son lentos",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
